<resources>

    <string name="app_name">MGRS GPS</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_coordinates">Coordinates</string>
    <string name="coordinates">Coordinates</string>
    <string name="default_coordinates">00XXX 00000 00000</string>
    <string name="accuracy">Accuracy:</string>
    <string name="bearing">Bearing:</string>
    <string name="altitude">Altitude:</string>
    <string name="message">Message:</string>
    <string name="Blank"></string>
    <string name="age">Age:</string>
    <string name="location_updated">Location updated...</string>
    <string name="gps_provider_disabled">GPS Provider Disabled.</string>
    <string name="gps_provider_enabled_acquiring">GPS Provider Enabled, Acquiring...</string>
    <string name="gps_status_changed">GPS Status Changed.</string>
    <string name="acquiring">Acquiring...</string>
    <string name="gridscale">Grid Scale</string>

</resources>