<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textViewCoordLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/coordinates"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textViewCoords"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/default_coordinates"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accuracy" />

    <TextView
        android:id="@+id/textViewAccuracy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/Blank"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age" />

    <TextView
        android:id="@+id/textViewAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Blank"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bearing" />

    <TextView
        android:id="@+id/textViewBearing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Blank"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/altitude" />

    <TextView
        android:id="@+id/textViewAltitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Blank"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message" />

    <TextView
        android:id="@+id/textViewMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Blank" />

</LinearLayout>